--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,11 @@ body {
     padding: 0;
     background-color: #f4f4f4;
 }
-
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 .container {
     max-width: 100%;
     padding: 20px;
@@ -14,6 +18,13 @@ body {
 h1 {
     color: #A81612;
 }
+
+button {
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+/*
 
 .product {
     background-color: white;
@@ -35,9 +46,9 @@ h1 {
 } */
 
 .product-image {
-    max-width: 100%;
+    width: 40%;
     height: auto;
-    max-height: 200px;
+    height: 40%;
     object-fit: contain;
     border-radius: 8px;
 }
@@ -52,6 +63,7 @@ h1 {
     margin-bottom: 15px;
 }
 
+/*
 .buy-button {
     background-color: #A81612;
     color: white;
@@ -62,6 +74,7 @@ h1 {
     border-radius: 4px;
     transition: background-color 0.3s ease;
 }
+    */
 
 .buy-button:hover {
     background-color: #8B0000;
